# fuzzysearch-rs

./: Cargo.toml  README.md
src/: lib.rs  types.rs
