[package]
name = "fuzzysearch"
version = "0.2.0"
authors = ["Syfaro <syfaro@huefox.com>"]
edition = "2021"
description = "An API wrapper for fuzzysearch.net"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
hex = { version = "0.4", features = ["serde"] }
image = { version = "0.23", optional = true }
img_hash = { version = "3", optional = true }
opentelemetry = { version = "0.21", optional = true }
opentelemetry-http = { version = "0.10", optional = true }
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = { version = "0.1", optional = true }
tracing-futures = { version = "0.2", optional = true }
tracing-opentelemetry = { version = "0.22", optional = true }
tracing-subscriber = { version = "0.3", optional = true }

[features]
trace = [
    "tracing",
    "tracing-futures",
    "tracing-opentelemetry",
    "opentelemetry",
    "tracing-subscriber",
    "opentelemetry-http",
]
local_hash = ["img_hash", "image"]

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
